--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".imageViewActivity"></activity>
         <activity android:name=".AboutUsActivity" />
         <activity android:name=".forwardMessage" />
         <activity android:name=".forwardMessageGrp" />
@@ -25,7 +26,9 @@
         <activity android:name=".acceptRequest" />
         <activity android:name=".allRequest" />
         <activity android:name=".sendRequest" />
-        <activity android:name=".chatPage" />
+        <activity
+            android:name=".chatPage"
+            android:hardwareAccelerated="false" />
         <activity android:name=".allusersActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".profileActivity" />
