--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,10 @@
         tools:ignore="ScopedStorage" />
 
     <application
-        android:name=".applicationClass"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="Affix"
-        android:roundIcon="@mipmap/logo"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:label">
