--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,35 +19,66 @@
         android:theme="@style/AppTheme"
         tools:replace="android:label">
         <activity android:name=".groupMeetingActivity" />
+
         <activity android:name=".meetingActivity" />
+
         <activity
             android:name=".imageViewActivity"
             android:hardwareAccelerated="false"
-            android:theme="@style/Widget.AppCompat.Toolbar" />
-        <activity android:name=".AboutUsActivity" />
+            android:theme="@style/Widget.AppCompat.Toolbar"/>
+
+        <activity android:name=".AboutUsActivity"
+            android:parentActivityName=".MainActivity"/>
+
         <activity android:name=".forwardMessage" />
+
         <activity android:name=".forwardMessageGrp" />
-        <activity android:name=".forwardMessageGroup" />
+
         <activity android:name=".addMember" />
+
         <activity android:name=".groupVisit" />
+
         <activity android:name=".profileVisit" />
+
         <activity
             android:name=".groupChat"
             android:hardwareAccelerated="false" />
-        <activity android:name=".sendRequestToJoinGroup" />
-        <activity android:name=".allGroupActivity" />
+
+        <activity android:name=".sendRequestToJoinGroup"
+            android:parentActivityName=".allGroupActivity" />
+
+        <activity android:name=".allGroupActivity"
+            android:parentActivityName=".MainActivity" />
+
         <activity android:name=".groupNameActivity" />
-        <activity android:name=".displayUserForGroup" />
-        <activity android:name=".acceptRequest" />
-        <activity android:name=".allRequest" />
-        <activity android:name=".sendRequest" />
+
+        <activity android:name=".displayUserForGroup"
+            android:parentActivityName=".MainActivity" />
+
+        <activity android:name=".acceptRequest"
+            android:parentActivityName=".allRequest"/>
+
+        <activity android:name=".allRequest"
+            android:parentActivityName=".MainActivity" />
+
+        <activity android:name=".sendRequest"
+            android:parentActivityName=".allusersActivity"/>
+
         <activity
             android:name=".chatPage"
             android:hardwareAccelerated="false" />
-        <activity android:name=".allusersActivity" />
+
+        <activity android:name=".allusersActivity"
+            android:parentActivityName=".MainActivity" />
+
         <activity android:name=".MainActivity" />
-        <activity android:name=".profileActivity" />
-        <activity android:name=".signupActivity" />
+
+        <activity android:name=".profileActivity"
+            android:parentActivityName=".MainActivity" />
+
+        <activity android:name=".signupActivity"
+            android:parentActivityName=".loginActivity"/>
+
         <activity android:name=".loginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,6 +86,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".splashScreenA"
             android:theme="@style/Theme.AppCompat.NoActionBar">
